# ek_fel

./: .gitignore  CMakeLists.txt  README.md  cv07.c  main  main.c  requirements.txt  test_all.py
C++/HWs/hw01/: main.cpp  main.hpp  parse.cpp  parse.hpp
C++/HWs/hw01/data/: bon_pub01.out  bon_pub02.out  bon_pub03.out  pub01.out  pub02.out  pub06.err
C++/HWs/hw01/template/: main.cpp
C++/HWs/hw02/: doprava.cpp  doprava.hpp  help.txt  main.cpp
C++/labs/01/: 1.cpp  2.cpp  3.cpp
C++/labs/02/: 1.cpp  main
C/LABs/: cv07  cv08  cv09  cv10
C/hw02a/: main
C/hw02b/: main.c
C/hw02b/data/: pub01.out  pub03.out
C/hw03b/data/: main_hw03b
C/hw04/: main.c
C/hw04/data/: main_hw04
C/hw05/: main  main.c
C/hw05/data/: pub_c06.in
C/hw06/: main  main.c
C/hw06/data/: main_hw06
C/hw07/: main.c
C/hw08/data/: pub06.in
C/hw09/: main  text_analysis_l_l.c
C/hw09/data/: pub00_my_out.txt
C/hw10/: main  queue.c
LABs/: cv08.c  cv09  cv09.c  cv10.c
LaTeX/: EKP_otazky.tex
bakalarka/: app.py  photos2.py  script.py
cpp/labs/labs01/: labs01.cpp
hw02/: github.md  main.c
hw02a/: main
hw02b/: main  main.c
hw02b/data/: main_hw02b  pub01.out  pub02.out  pub03.in  pub04.out
hw03/: main  main.c
hw03/data/: main_hw03  pub04.in
hw03a/: main.c
hw03b/: main  main.c  readme.txt
hw04/: main  main.c
hw04/data/: main_hw04
hw05/: check_output.bat  main  main.c
hw05/data/: main_hw05  pub_b04.in  pub_c04.in  pub_c05.in
hw06/: main  main.c
hw06/data/: main_hw06
hw07/: main  main.c
hw08/: hw08.py  main  main.c
hw08/data/: main_hw08  pub07.in  pub08.in
hw09/: Makefile  hw09-1.c  hw09.c  hw09.py  hw09_2.c  main  main.c  text_analysis_l_l.c
hw10/: main.c  queue.c  queue.h
hw10/data/man/: test_all.sh
hw10/data/opt/: test_all.sh  test_memory.sh
my_codes_working/: input_1  input_2  main  main.c  test  test.c
my_codes_working/data/: main_hw07
