cmake_minimum_required(VERSION 3.16)
project(hw02a)
set(CMAKE_CXX_STANDARD 14)
add_executable(hw02a
        hw02a/main.c)

project(hw02b)
set(CMAKE_CXX_STANDARD 14)
add_executable(hw02b
        hw02b/main.c)

project(hw03)
set(CMAKE_CXX_STANDARD 14)
add_executable(hw03
        hw03/main.c)

project(hw04)
set(CMAKE_CXX_STANDARD 14)
add_executable(hw04
        hw04/main.c)

