cmake_minimum_required(VERSION 3.16)

#project(cpp-lab01)
#set(CMAKE_CXX_STANDARD 14)
#add_executable(cpp_labs01
#        C++/labs/01/1.cpp)

project(hw01)
set(CMAKE_CXX_STANDARD 14)
add_executable(hw_01
        C++/HWs/hw01/main.cpp
        C++/HWs/hw01/main.hpp
        C++/HWs/hw01/parse.hpp
        C++/HWs/hw01/parse.cpp
        )